--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -32,8 +32,9 @@ jobs:
       fail-fast: false
       matrix:
         include:
+          # macOS: 只构建 Apple Silicon (aarch64) 版本，避免 x86 链接错误
           - platform: 'macos-latest'
-            args: '--target universal-apple-darwin'
+            args: '--target aarch64-apple-darwin'
           - platform: 'ubuntu-22.04'
             args: ''
           - platform: 'windows-latest'
@@ -49,23 +50,32 @@ jobs:
         with:
           node-version: 20
 
+      # Rust 安装配置
       - name: Install Rust
         uses: dtolnay/rust-toolchain@stable
         with:
-          targets: ${{ matrix.platform == 'macos-latest' && 'aarch64-apple-darwin,x86_64-apple-darwin' || '' }}
+          targets: ${{ matrix.platform == 'macos-latest' && 'aarch64-apple-darwin' || '' }}
 
+      # --- macOS 依赖 ---
       - name: Install macOS Dependencies
         if: matrix.platform == 'macos-latest'
         run: |
           brew install protobuf
 
+      # --- Linux 依赖 ---
       - name: Install Linux Dependencies
         if: matrix.platform == 'ubuntu-22.04'
         run: |
           sudo apt-get update
-          # 注意：这里添加了 protobuf-compiler 和 libsoup-3.0-dev
-          # 同时将 webkit2gtk-4.0 升级为 4.1 (Tauri v2 推荐)
           sudo apt-get install -y libgtk-3-dev libwebkit2gtk-4.1-dev libappindicator3-dev librsvg2-dev patchelf libsoup-3.0-dev protobuf-compiler
+
+      # --- Windows 依赖 (新增修复) ---
+      # 使用专用 Action 安装 Protoc，它会自动设置环境变量
+      - name: Install Protoc (Windows)
+        if: matrix.platform == 'windows-latest'
+        uses: arduino/setup-protoc@v3
+        with:
+          repo-token: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Install Frontend Dependencies
         run: npm install
@@ -79,6 +89,7 @@ jobs:
           args: ${{ matrix.args }}
           tagName: ${{ github.ref_name }}
 
+      # 上传 Windows 绿色版 Exe
       - name: Upload Windows Portable Exe
         if: matrix.platform == 'windows-latest'
         uses: actions/upload-release-asset@v1
