--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -32,7 +32,7 @@ jobs:
       fail-fast: false
       matrix:
         include:
-          # macOS: 只构建 Apple Silicon (aarch64) 版本，避免 x86 链接错误
+          # macOS: 只构建 Apple Silicon (aarch64) 版本
           - platform: 'macos-latest'
             args: '--target aarch64-apple-darwin'
           - platform: 'ubuntu-22.04'
@@ -69,8 +69,7 @@ jobs:
           sudo apt-get update
           sudo apt-get install -y libgtk-3-dev libwebkit2gtk-4.1-dev libappindicator3-dev librsvg2-dev patchelf libsoup-3.0-dev protobuf-compiler
 
-      # --- Windows 依赖 (新增修复) ---
-      # 使用专用 Action 安装 Protoc，它会自动设置环境变量
+      # --- Windows 依赖 ---
       - name: Install Protoc (Windows)
         if: matrix.platform == 'windows-latest'
         uses: arduino/setup-protoc@v3
